--- a/.i3/config
+++ b/.i3/config
@@ -9,6 +9,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
+# Set Win as Mod
 set $mod Mod4
 
 # Wallpaper
@@ -33,7 +34,7 @@ bindsym $mod+Return exec terminator
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec dmenu_run -i -z
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -113,12 +114,15 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
+# move the focused container between outputs
+bindsym $mod+Shift+y move workspace to output up
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-msg exit"
+bindsym $mod+Shift+e exit
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -149,18 +153,23 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        output LVDS1
+        tray_output primary
+        status_command i3status -c ~/.i3/i3status.conf
+        position bottom
+        mode dock
+}
+
+bar {
+        output VGA1
+        tray_output none
+        workspace_buttons yes
+        mode hide
 }
 
 # autostarting
 exec volti
 exec nm-applet
-exec --no-startup-id i3-msg 'workspace 1; exec opera'
-exec --no-startup-id i3-msg 'workspace 2; exec terminator -e irssi; workspace 1'
-
-# Assigning to the correct workspaces
-assign [class="Opera"] → 6
-assign [class="terminator" instance="^irssi$"] → 2
 
 # assigning workspaces to specific outputs
 workspace 1 output LVDS1
@@ -174,8 +183,5 @@ workspace 8 output VGA1
 workspace 9 output VGA1
 workspace 10 output VGA1
 
-# Power management
+# Auto Suspend when lid is closed. (I need something that does this better)
 execalways xfce-power-manager
-
-# Fixes the keyboard layout for thinkpads
-execalways setxkbmap -model thinkpad60 -layout br
